tests/should_succeed/imported/samename1.jou
# Tests two files with non-public things that have same name.
global value: int

def internal() -> None:
    value *= 10

@public
def public_func_1() -> int:
    value = 1
    internal()
    return value
